--- a/wordpress/wp-content/themes/fgdemo/assets/scss/framework/_home.scss
+++ b/wordpress/wp-content/themes/fgdemo/assets/scss/framework/_home.scss
@@ -29,13 +29,18 @@
 
   .row {
     width: 65%;
+    margin: 0 auto;
+
+    @include tablet {
+      width: 100%;
+    }
   }
 
   .circle-icon {
       background: #bcbcbc;
       padding: 25px;
       border-radius: 50%;
-      margin: 3px;
+      margin: 2%;
   }
 
   .fa-cog {
@@ -60,7 +65,7 @@
     }
 
     @include phone {
-      width: 100%;
+      width: 98%;
     }
   }
 
@@ -185,7 +190,7 @@
     }
 }
 
-#subscribe-home {
+#affiliates {
   padding: 100px 0;
 
   h2 {
