--- a/wordpress/wp-content/themes/fgdemo/assets/scss/modules/_carousel.scss
+++ b/wordpress/wp-content/themes/fgdemo/assets/scss/modules/_carousel.scss
@@ -24,7 +24,7 @@
 }
 
 .carousel-inner>.item>a>img, .carousel-inner>.item>img {
-  height: 600px;
+  height: 500px;
   width: auto;
   object-fit: cover;
 }
